feat: add header

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+     <link rel="icon" href="assets/favicon.ico">
     <title>CV MK</title>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-list-item"><a href="#section-about" class="nav-list-item-link">About me</a></li>
+                    <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
+                    <li class="nav-list-item"><a href="#card-skills" class="nav-list-item-link">Skills</a></li>
+                    <li class="nav-list-item"><a href="#card-experience" class="nav-list-item-link">Experience</a></li>
+                    <li class="nav-list-item"><a href="#card-code" class="nav-list-item-link">Code Example</a></li>
+                    <li class="nav-list-item"><a href="#contacts" class="nav-list-item-link">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
