--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <title>CV MK</title>
 </head>
 <body>
+   <div class="container">
     <header class="header">
-        <div class="container">
-            <nav class="nav">
-                <ul class="nav-list">
-                    <li class="nav-list-item"><a href="#section-about" class="nav-list-item-link">About me</a></li>
-                    <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
-                    <li class="nav-list-item"><a href="#card-skills" class="nav-list-item-link">Skills</a></li>
-                    <li class="nav-list-item"><a href="#card-experience" class="nav-list-item-link">Experience</a></li>
-                    <li class="nav-list-item"><a href="#card-code" class="nav-list-item-link">Code Example</a></li>
-                    <li class="nav-list-item"><a href="#contacts" class="nav-list-item-link">Contacts</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-list-item"><a href="#section-about" class="nav-list-item-link">About me</a></li>
+            <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
+            <li class="nav-list-item"><a href="#card-skills" class="nav-list-item-link">Skills</a></li>
+            <li class="nav-list-item"><a href="#card-experience" class="nav-list-item-link">Experience</a></li>
+            <li class="nav-list-item"><a href="#card-code" class="nav-list-item-link">Code Example</a></li>
+            <li class="nav-list-item"><a href="#contacts" class="nav-list-item-link">Contacts</a></li>
+          </ul>
+        </nav>
     </header>
+    <article class="article-title">
+      <img class="my-avatar" src="./assets/img/my-avatar_n.jpg" alt="My avatar">
+      <h1 class="article-title-title">Mariya Kuchma</h1>
+    </article>
+
 </body>
 </html>
