feat: add contacts block

--- a/index.html
+++ b/index.html
@@ -21,10 +21,34 @@
           </ul>
         </nav>
     </header>
-    <article class="article-title">
-      <img class="my-avatar" src="./assets/img/my-avatar_n.jpg" alt="My avatar">
-      <h1 class="article-title-title">Mariya Kuchma</h1>
+    <article class="article">
+      <div class="article-title">
+        <img class="my-avatar" src="./assets/img/my-avatar_n.jpg" alt="My avatar">
+        <h1 class="article-title-title">Mariya Kuchma</h1>
+      </div>
+      <div class="contact">
+        <h3 class="contact-title title">Contacts</h3>
+        <ul class="contact-list">
+          <li class="contact-list-item">
+            <a class="contact-list-link" href="mailto:u4eba2013@gmail.com">
+              <img class="contact-icon" src="./assets/svg/gmail.svg" alt="gmail contact"> u4eba2013@gmail.com
+            </a>
+          </li>
+          <li class="contact-list-item">
+            <a class="contact-list-link" href="https://t.me/itsCATch22">
+              <img class="contact-icon" src="./assets/svg/telegram.svg" alt="telegram contact">MK
+            </a>
+          </li>
+          <li class="contact-list-item">
+            <a class="contact-list-link" href="https://discordapp.com/users/803989380762828801" title="discord MikaLaz">
+            <img class="contact-icon" src="./assets/svg/discord.svg" alt="discord account link"> Mika
+          </a>
+          </li>
+        </ul>
+
+      </div>
     </article>
 
+</div>
 </body>
 </html>
