feat: add skills block

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="contact-list">
           <li class="contact-list-item">
             <a class="contact-list-link" href="mailto:u4eba2013@gmail.com">
-              <img class="contact-icon" src="./assets/svg/gmail.svg" alt="gmail contact"> u4eba2013@gmail.com
+              <img class="contact-icon" src="./assets/svg/mail.svg" alt="gmail contact"> u4eba2013@gmail.com
             </a>
           </li>
           <li class="contact-list-item">
@@ -45,7 +45,16 @@
           </a>
           </li>
         </ul>
-
+      </div>
+      <div class="skills">
+        <h3 class="skills-title">Skills</h3>
+          <ul class="skills-list">
+            <li class="skills-list-item">HTML, CSS</li>
+            <li class="skills-list-item">JavaScript</li>
+            <li class="skills-list-item">Wordpress</li>
+            <li class="skills-list-item">Git</li>
+            <li class="skills-list-item">English - <b>A1</b></li>
+          </ul>
       </div>
     </article>
 
