feat: add experience block

--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
             <li class="skills-list-item">English - <b>A1</b></li>
           </ul>
       </div>
+      <div class="exp">
+        <h3 class="exp-title">Experience</h3>
+          <ul class="exp-list">
+            <li class="exp-list-item">
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL/portfolio/"
+                >Portfolio</a>
+            </li>
+            <li class="exp-list-item">
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q4/plants/"
+                >Plants</a>
+            </li>
+            <li class="exp-list-item">
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q2/momentum/"
+                >Momentum</a>
+            </li>
+            <li class="exp-list-item">
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2024Q2/shelter/"
+                >Shelter</a>
+            </li>
+          </ul>
+      </div>
     </article>
 
 </div>
