refactor: change styles for block article

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           <ul class="nav-list">
             <li class="nav-list-item"><a href="#section-about" class="nav-list-item-link">About me</a></li>
             <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
-            <li class="nav-list-item"><a href="#card-skills" class="nav-list-item-link">Skills</a></li>
-            <li class="nav-list-item"><a href="#card-experience" class="nav-list-item-link">Experience</a></li>
+            <li class="nav-list-item"><a href="#skills" class="nav-list-item-link">Skills</a></li>
+            <li class="nav-list-item"><a href="#experience" class="nav-list-item-link">Experience</a></li>
             <li class="nav-list-item"><a href="#card-code" class="nav-list-item-link">Code Example</a></li>
             <li class="nav-list-item"><a href="#contacts" class="nav-list-item-link">Contacts</a></li>
           </ul>
@@ -27,8 +27,8 @@
         <h1 class="article-title-title">Mariya Kuchma</h1>
       </div>
       <div class="contact">
-        <h3 class="contact-title title">Contacts</h3>
-        <ul class="contact-list">
+        <h3 class="contact-title article-subtitle" id="contacts">Contacts</h3>
+        <ul class="contact-list article-list">
           <li class="contact-list-item">
             <a class="contact-list-link" href="mailto:u4eba2013@gmail.com">
               <img class="contact-icon" src="./assets/svg/mail.svg" alt="gmail contact"> u4eba2013@gmail.com
@@ -46,9 +46,9 @@
           </li>
         </ul>
       </div>
-      <div class="skills">
-        <h3 class="skills-title">Skills</h3>
-          <ul class="skills-list">
+      <div class="skills" id="skills">
+        <h3 class="skills-title article-subtitle">Skills</h3>
+          <ul class="skills-list article-list">
             <li class="skills-list-item">HTML, CSS</li>
             <li class="skills-list-item">JavaScript</li>
             <li class="skills-list-item">Wordpress</li>
@@ -57,8 +57,8 @@
           </ul>
       </div>
       <div class="exp">
-        <h3 class="exp-title">Experience</h3>
-          <ul class="exp-list">
+        <h3 class="exp-title article-subtitle" id="experience">Experience</h3>
+          <ul class="exp-list article-list">
             <li class="exp-list-item">
               <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL/portfolio/"
                 >Portfolio</a>
