feat: add block about

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           </ul>
         </nav>
     </header>
+
+    <main class="main">
     <article class="article">
       <div class="article-title">
         <img class="my-avatar" src="./assets/img/my-avatar_n.jpg" alt="My avatar">
@@ -78,7 +80,14 @@
           </ul>
       </div>
     </article>
+  <section class="section">
+    <div class="about">
+      <h2 class="about-title">About me</h2>
+      <p class="about-desc">I work now as a government employee in the federal service, my job is related to the maintenance of equipment in the department and consulting services to clients on the operation of government information systems. I've loved layout since I was a student. I've been working with Wordpress for a while, setting up templates for websites. I want to develop in this direction, to master a deeper understanding of frontend development.</p>
+    </div>
+  </section>
+    </main>
+  </div>
 
-</div>
 </body>
 </html>
