feat: add block education

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <nav class="nav">
           <ul class="nav-list">
-            <li class="nav-list-item"><a href="#section-about" class="nav-list-item-link">About me</a></li>
+            <li class="nav-list-item"><a href="#about" class="nav-list-item-link">About me</a></li>
             <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
             <li class="nav-list-item"><a href="#skills" class="nav-list-item-link">Skills</a></li>
             <li class="nav-list-item"><a href="#experience" class="nav-list-item-link">Experience</a></li>
@@ -81,10 +81,23 @@
       </div>
     </article>
   <section class="section">
-    <div class="about">
+    <div class="about" id="about">
       <h2 class="about-title">About me</h2>
       <p class="about-desc">I work now as a government employee in the federal service, my job is related to the maintenance of equipment in the department and consulting services to clients on the operation of government information systems. I've loved layout since I was a student. I've been working with Wordpress for a while, setting up templates for websites. I want to develop in this direction, to master a deeper understanding of frontend development.</p>
     </div>
+     <div class="edu" id="edu">
+          <h2 class="edu-title">Education</h2>
+          <ul class="edu-list">
+            <li class="edu-list-item">University: Kuban State University, Economic security;</li>
+             <li class="edu-list-item">Maikop Polytechnic College, Computer Engineering and Automated systems software;</li>
+            <li class="edu-list-item">Courses:</li>
+              <ul class="edu-item-sublist">
+                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://itvdn.com/ru/video/javascript-starter">JavaScript Starter</a></li>
+                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://rs.school/js-stage0" >JS/FE Pre-School 2022Q2 </a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
   </section>
     </main>
   </div>
