feat: add footer

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav class="nav">
           <ul class="nav-list">
             <li class="nav-list-item"><a href="#about" class="nav-list-item-link">About me</a></li>
-            <li class="nav-list-item"><a href="#card-edu" class="nav-list-item-link">Education</a></li>
+            <li class="nav-list-item"><a href="#edu" class="nav-list-item-link">Education</a></li>
             <li class="nav-list-item"><a href="#skills" class="nav-list-item-link">Skills</a></li>
             <li class="nav-list-item"><a href="#experience" class="nav-list-item-link">Experience</a></li>
-            <li class="nav-list-item"><a href="#card-code" class="nav-list-item-link">Code Example</a></li>
+            <li class="nav-list-item"><a href="#code" class="nav-list-item-link">Code Example</a></li>
             <li class="nav-list-item"><a href="#contacts" class="nav-list-item-link">Contacts</a></li>
           </ul>
         </nav>
@@ -117,7 +117,25 @@
           </div>
         </div>
   </section>
-    </main>
+  </main>
+   <footer class="footer">
+      <ul class="footer-list">       
+        <li class="footer-list-item data">
+          <data value="2025">2025 July</data>
+        </li>
+          <li class="footer-list-item">
+          <a href="https://github.com/MikaLaz" title="github MikaLaz">
+            <img class="footer-icon" src="./assets/img/github.gif" alt="github account link">
+          </a>
+       <li class="footer-list-item">
+          <a href="https://rs.school/js/" title="rsschool">
+            <img class="footer-icon" src="./assets/img/rs_school_jss.png" alt="rsschool link">
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </div>
+<script src="./script.js"></script>
   </div>
 
 </body>
