refactor: changa links

--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <h3 class="contact-title article-subtitle" id="contacts">Contacts</h3>
         <ul class="contact-list article-list">
           <li class="contact-list-item">
-            <a class="contact-list-link" href="mailto:u4eba2013@gmail.com">
-              <img class="contact-icon" src="./assets/svg/mail.svg" alt="gmail contact"> u4eba2013@gmail.com
+            <a class="contact-list-link" href="mailto:u4eba2013@gmail.com" title="email" target="_blank">
+              <img class="contact-icon" src="./assets/svg/mail.svg" alt="gmail contact" > u4eba2013@gmail.com
             </a>
           </li>
           <li class="contact-list-item">
-            <a class="contact-list-link" href="https://t.me/itsCATch22">
+            <a class="contact-list-link" href="https://t.me/itsCATch22" title="telegram MK" target="_blank">
               <img class="contact-icon" src="./assets/svg/telegram.svg" alt="telegram contact">MK
             </a>
           </li>
           <li class="contact-list-item">
-            <a class="contact-list-link" href="https://discordapp.com/users/803989380762828801" title="discord MikaLaz">
+            <a class="contact-list-link" href="https://discordapp.com/users/803989380762828801" title="discord MikaLaz" target="_blank">
             <img class="contact-icon" src="./assets/svg/discord.svg" alt="discord account link"> Mika
           </a>
           </li>
@@ -62,20 +62,16 @@
         <h3 class="exp-title article-subtitle" id="experience">Experience</h3>
           <ul class="exp-list article-list">
             <li class="exp-list-item">
-              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL/portfolio/"
-                >Portfolio</a>
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL/portfolio/" target="_blank">Portfolio</a>
             </li>
             <li class="exp-list-item">
-              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q4/plants/"
-                >Plants</a>
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q4/plants/" target="_blank"> Plants</a>
             </li>
             <li class="exp-list-item">
-              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q2/momentum/"
-                >Momentum</a>
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2022Q2/momentum/" target="_blank">Momentum</a>
             </li>
             <li class="exp-list-item">
-              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2024Q2/shelter/"
-                >Shelter</a>
+              <a class="exp-item-link" href="https://rolling-scopes-school.github.io/mikalaz-JSFEPRESCHOOL2024Q2/shelter/" target="_blank">Shelter</a>
             </li>
           </ul>
       </div>
@@ -92,8 +88,8 @@
              <li class="edu-list-item">Maikop Polytechnic College, Computer Engineering and Automated systems software;</li>
             <li class="edu-list-item">Courses:</li>
               <ul class="edu-item-sublist">
-                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://itvdn.com/ru/video/javascript-starter">JavaScript Starter</a></li>
-                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://rs.school/js-stage0" >JS/FE Pre-School 2022Q2 </a></li>
+                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://itvdn.com/ru/video/javascript-starter" target="_blank"> JavaScript Starter</a></li>
+                <li class="edu-item-sublist-item"><a class="sublist-link" href="https://rs.school/js-stage0" target="_blank">JS/FE Pre-School 2022Q2 </a></li>
               </ul>
             </li>
           </ul>
@@ -101,7 +97,7 @@
           <div class="code" id="code">
           <h2 class="code-title">Code Example</h2>
           <div class="code-text">
-            <a class="code-link" href="https://www.codewars.com/kata/5a4138acf28b82aa43000117/javascript">Cata "Maximum Product"</a>
+            <a class="code-link" href="https://www.codewars.com/kata/5a4138acf28b82aa43000117/javascript" target="_blank">Cata "Maximum Product"</a>
             <p>Solution:</p>
              <pre>
               function adjacentElementsProduct(array) {
@@ -119,17 +115,17 @@
   </section>
   </main>
    <footer class="footer">
-      <ul class="footer-list">       
+      <ul class="footer-list">
         <li class="footer-list-item data">
           <data value="2025">2025 July</data>
         </li>
           <li class="footer-list-item">
-          <a href="https://github.com/MikaLaz" title="github MikaLaz">
+          <a href="https://github.com/MikaLaz" title="github MikaLaz" target="_blank">
             <img class="footer-icon" src="./assets/img/github.gif" alt="github account link">
           </a>
        <li class="footer-list-item">
-          <a href="https://rs.school/js/" title="rsschool">
-            <img class="footer-icon" src="./assets/img/rs_school_jss.png" alt="rsschool link">
+          <a href="https://rs.school/js/" title="rsschool" target="_blank">
+            <img class="footer-icon" src="./assets/img/rs_school_jss.png" alt="rsschool link" target="_blank">
           </a>
         </li>
       </ul>
