fix: fix mistakes validator

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <ul class="edu-list">
             <li class="edu-list-item">University: Kuban State University, Economic security;</li>
              <li class="edu-list-item">Maikop Polytechnic College, Computer Engineering and Automated systems software;</li>
-            <li class="edu-list-item">Courses:</li>
+            <li class="edu-list-item">Courses:
               <ul class="edu-item-sublist">
                 <li class="edu-item-sublist-item"><a class="sublist-link" href="https://itvdn.com/ru/video/javascript-starter" target="_blank"> JavaScript Starter</a></li>
                 <li class="edu-item-sublist-item"><a class="sublist-link" href="https://rs.school/js-stage0" target="_blank">JS/FE Pre-School 2022Q2 </a></li>
@@ -103,7 +103,7 @@
               function adjacentElementsProduct(array) {
                 let multyArr = [];
                 let multy;
-                for (let i = 0; i < array.length - 1; i++) {
+                for (let i = 0; i &lt; array.length - 1; i++) {
                 multy = array[i] * array[i + 1];
                 multyArr.push(multy);
                 }
@@ -125,14 +125,11 @@
           </a>
        <li class="footer-list-item">
           <a href="https://rs.school/js/" title="rsschool" target="_blank">
-            <img class="footer-icon" src="./assets/img/rs_school_jss.png" alt="rsschool link" target="_blank">
+            <img class="footer-icon" src="./assets/img/rs_school_jss.png" alt="rsschool link">
           </a>
         </li>
       </ul>
     </footer>
   </div>
-<script src="./script.js"></script>
-  </div>
-
-</body>
+ </body>
 </html>
